# modelux-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/modelux/: __init__.py  _client.py  _errors.py  _types.py
tests/: conftest.py  test_client.py  test_integration.py
